toListメソッドを使用するように修正